# doceu26

./: .gitignore  CLAUDE.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/chat/: package.json
apps/chat/src/: ChatPage.tsx  constants.ts  types.ts  useAuth.ts  utils.ts
apps/chat/src/hooks/: useChatConnection.ts  useChatState.ts  useResponsive.ts  useWebRTC.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/shell/: package.json  vite.config.ts
apps/shell/src/: App.tsx  index.css  main.tsx
apps/shell/src/auth/: AcceptInvitePage.tsx  AuthContext.tsx  LoginPage.tsx
apps/shell/src/components/: AppShell.tsx  UnderDevelopment.tsx
apps/shell/src/pages/: HomePage.tsx
apps/storybook/: package.json
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx
infra/docker/: .env.example  docker-compose.prod.yml  docker-compose.yml  init-databases.sql
infra/nginx/: nginx.conf
proto/auth/v1/: auth.proto
proto/chat/v1/: chat.proto
proto/collab/v1/: collab.proto
proto/document/v1/: document.proto
proto/storage/v1/: storage.proto
services/: go.work
services/audit/: go.mod
services/auth/: go.mod  go.sum
services/calendar/: go.mod
services/chat/: go.mod
services/collab/: go.mod
services/document/: go.mod
services/email/: go.mod
services/gateway/: go.mod
services/notification/: go.mod
services/search/: go.mod
services/shared/: go.mod
services/storage/: go.mod
(+85 files in other folders)
